Update @master/colors installation command

--- a/website/app/[locale]/(root)/roadmap/content.mdx
+++ b/website/app/[locale]/(root)/roadmap/content.mdx
@@ -69,7 +69,7 @@ Master CSS's colors have been spun off into a new repository [master-co/colors](
 </figure>
 Now, you can install it separately anywhere.
 ```install
-@master/colors@rc
+@master/colors
 ```
 
 ### Master CSS Configuration
