Fix inconsistent font weight and size across browsers

--- a/website/app/[locale]/(root)/docs/global-styles/content.mdx
+++ b/website/app/[locale]/(root)/docs/global-styles/content.mdx
@@ -61,6 +61,12 @@ Fixed the inconsistent font weight of `html <b>` and `html <strong>` across brow
 {require('!!raw-loader!@master/normal.css/consistent-bold-styles.css').default}
 </Code>
 
+### Consistent code styles
+Fixed the inconsistent font size of code-related elements across browsers.
+<Code lang="css">
+{require('!!raw-loader!@master/normal.css/consistent-code-styles.css').default}
+</Code>
+
 ### Consistent small styles
 Fixed the inconsistent font size of `html <small>` across browsers.
 <Code lang="css">
