Update metadata and package versions

--- a/website/app/[locale]/(root)/roadmap/content.mdx
+++ b/website/app/[locale]/(root)/roadmap/content.mdx
@@ -172,7 +172,7 @@ We don't want to hastily release peripherals or even paid products before the pr
 
 Master CSS 2.0 will be officially released in May, and this year's product plan is confirmed!
 
-| ETA  | Product                                                              | Version  | Introduction                                                          |
+| ETA  | Product                                                              |          | Introduction                                                          |
 |------|----------------------------------------------------------------------|----------|-----------------------------------------------------------------------|
 | ✔    | [**Master Theme Mode**](https://github.com/master-co/theme-mode)     | v1.0     | A lightweight utility for switching CSS theme modes                   |
 | ✔    | [**Master Normal CSS**](https://github.com/master-co/normal.css)     | v2.0     | Normalize browser's styles ~600B                                      |
