Fix typo in roadmap content

--- a/website/app/[locale]/(root)/roadmap/content.mdx
+++ b/website/app/[locale]/(root)/roadmap/content.mdx
@@ -181,7 +181,7 @@ Master CSS 2.0 will be officially released in May, and this year's product plan 
 | Q2   | **Master CSS**                                                       | v2.0     | The CSS Language and Framework                                        |
 | Q3   | [**Master UI**](https://github.com/master-co/ui)                     | v1.0     | Beautiful components crafted with Master CSS                          |
 | Q4   | **Master UI Pro**                                                    | v1.0     | Professional UIs crafted with Master UI                               |
-| ?    | **Master AI**                                                        | v1.0     | Beautiful generative UIs built on Master UI.                           |
+| ?    | **Master AI**                                                        | v1.0     | Beautiful generative UIs built on Master UI                           |
 
 ### Master UI
 What's heartening so far is that the community is still eagerly awaiting Master UI 😌 With a comprehensive plan in place internally, here's an early disclosure of Master UI's product positioning and solutions.
