Perf: Parse at-tokens and manipulate abstract syntax nodes

--- a/website/app/[locale]/(root)/docs/configuration/content.mdx
+++ b/website/app/[locale]/(root)/docs/configuration/content.mdx
@@ -11,7 +11,7 @@ import StylesOverview from '../styles/components/Overview.mdx'
 ```bash name=Terminal
 npm create @master/css@rc
 ```
-It generates a top-level configuration file `master.css.{js,mjs,ts}` based on the characteristics of your project.
+If you don't have a configuration file, [create](/docs/create) one first.
 
 ---
 
