Improve: Rename `config.mediaQueries` to `config.queries` and share it with `@media` `@supports` `@container`

--- a/website/app/[locale]/(root)/docs/configuration/content.mdx
+++ b/website/app/[locale]/(root)/docs/configuration/content.mdx
@@ -24,7 +24,7 @@ Customizing animation [animations](/docs/animations) for your design system.
 Customizing [functions](/docs/functions) for your design system.
 <FunctionsOverview />
 
-### `.mediaQueries`
+### `.queries`
 Customizing [media queries](/docs/media-queries) for your design system.
 <MediaQueriesOverview />
 
