--- a/website/app/[locale]/(root)/docs/media-queries/components/Overview.mdx
+++ b/website/app/[locale]/(root)/docs/media-queries/components/Overview.mdx
@@ -1,6 +1,6 @@
 ```js name=master.css.js
 export default {
-    mediaQueries: {
+    queries: {
         mobile: 600,
         tablet: 1024,
         desktop: 1440,
