Rename Media Queries to Queries

--- a/website/app/[locale]/(root)/docs/configuration/content.mdx
+++ b/website/app/[locale]/(root)/docs/configuration/content.mdx
@@ -2,7 +2,7 @@ import RulesOverview from '../rules/components/Overview.mdx'
 import VariablesOverview from '../variables/components/Overview.mdx'
 import SemanticsOverview from '../semantics/components/Overview.mdx'
 import KeyframesOverview from '../animations/components/Overview.mdx'
-import MediaQueriesOverview from '../media-queries/components/Overview.mdx'
+import MediaQueriesOverview from '../queries/components/Overview.mdx'
 import SelectorsOverview from '../selectors/components/Overview.mdx'
 import FunctionsOverview from '../functions/components/Overview.mdx'
 import StylesOverview from '../styles/components/Overview.mdx'
@@ -25,7 +25,7 @@ Customizing [functions](/docs/functions) for your design system.
 <FunctionsOverview />
 
 ### `.queries`
-Customizing [media queries](/docs/media-queries) for your design system.
+Customizing [media queries](/docs/queries) for your design system.
 <MediaQueriesOverview />
 
 ### `.rules`
