--- a/website/app/[locale]/(root)/docs/introduction/components/Comparisons.mdx
+++ b/website/app/[locale]/(root)/docs/introduction/components/Comparisons.mdx
@@ -147,7 +147,7 @@ export const bootstrap = brands.find(({ name }) => name === 'Bootstrap')
             <td><InlineBad /></td>
         </tr>
         <tr>
-            <th>[Media Queries](/docs/media-queries)</th>
+            <th>[Queries](/docs/queries)</th>
             <td><InlineGood /></td>
             <td><InlineBad /></td>
             <td><InlineBad /></td>
