--- a/website/app/[locale]/(root)/docs/introduction/components/Configuration.mdx
+++ b/website/app/[locale]/(root)/docs/introduction/components/Configuration.mdx
@@ -1,6 +1,6 @@
 import animationsMetadata from '../../animations/metadata'
 import functionsMetadata from '../../functions/metadata'
-import mediaQueriesMetadata from '../../media-queries/metadata'
+import mediaQueriesMetadata from '../../queries/metadata'
 import rulesMetadata from '../../rules/metadata'
 import selectorsMetadata from '../../selectors/metadata'
 import semanticsMetadata from '../../semantics/metadata'
@@ -24,7 +24,7 @@ import variablesMetadata from '../../variables/metadata'
             <td>{functionsMetadata.description}</td>
         </tr>
         <tr>
-            <th>[Media Queries](/docs/media-queries)</th>
+            <th>[Queries](/docs/queries)</th>
             <td>{mediaQueriesMetadata.description}</td>
         </tr>
         <tr>
