--- a/website/app/[locale]/(root)/docs/markup-driven/content.mdx
+++ b/website/app/[locale]/(root)/docs/markup-driven/content.mdx
@@ -225,7 +225,7 @@ It can be [stateful and selectable](/docs/selectors):
 <!-- Use simplified :first instead of :nth-child to set pink background -->
 <div class="bg:pink:first">
 ```
-It can be [responsive](/docs/responsive-design) and [conditional](/docs/media-queries):
+It can be [responsive](/docs/responsive-design) and [conditional](/docs/queries):
 ```html
 <!-- Set width to 50rem, when screen width >=1024 -->
 <div class="width:800@>=1024">
