--- a/website/app/[locale]/(root)/docs/migration/v1/content.mdx
+++ b/website/app/[locale]/(root)/docs/migration/v1/content.mdx
@@ -123,7 +123,7 @@ Deprecate extended `breakpoints` and `queries` ​​in favor of `config.queries
 +    }
 +}
 ```
-To learn more, check out the [Media Queries](/docs/media-queries) documentation.
+To learn more, check out the [Queries](/docs/queries) documentation.
 
 ### Unknown tokens as themes
 Deprecated `colorSchemes` and considered unknown media query tokens as themes.
