--- a/website/i18n/tw.json
+++ b/website/i18n/tw.json
@@ -121,7 +121,7 @@
     "Selectors": "選取器 Selectors",
     "Functions": "函式 Functions",
     "Breakpoints": "響應式斷點 Breakpoints",
-    "Media Queries": "媒體查詢 Media Queries",
+    "Queries": "查詢 Queries",
     "State Selectors": "狀態選取器",
     "Conditional Queries": "條件式查詢",
     "Core Syntax": "核心語法",
