--- a/website/app/[locale]/(root)/docs/queries/components/Overview.mdx
+++ b/website/app/[locale]/(root)/docs/queries/components/Overview.mdx
@@ -4,7 +4,7 @@ export default {
         mobile: 600,
         tablet: 1024,
         desktop: 1440,
-        watch: '(max-device-width:42mm) and (min-device-width:38mm)'
+        watch: 'media (max-device-width:42mm) and (min-device-width:38mm)'
     }
 }
 ```
