Add new color and screen options to the translation file

--- a/website/i18n/tw.json
+++ b/website/i18n/tw.json
@@ -121,6 +121,9 @@
     "Selectors": "選取器 Selectors",
     "Functions": "函式 Functions",
     "Breakpoints": "響應式斷點 Breakpoints",
+    "Base Colors": "基本色彩",
+    "Text Colors": "文本色彩",
+    "Screens": "畫面",
     "Queries": "查詢 Queries",
     "State Selectors": "狀態選取器",
     "Conditional Queries": "條件式查詢",
